# click-app-template-repository-demo

./: README.md  pyproject.toml  setup.py
click_app_template_repository_demo/: cli.py
tests/: test_click_app_template_repository_demo.py
