[project]
name = "click-app-template-repository-demo"
version = "0.1"
description = "Demo of click-app-template-repository"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/simonw/click-app-template-repository-demo"
Changelog = "https://github.com/simonw/click-app-template-repository-demo/releases"
Issues = "https://github.com/simonw/click-app-template-repository-demo/issues"
CI = "https://github.com/simonw/click-app-template-repository-demo/actions"

[project.entry-points.console_scripts]
click-app-template-repository-demo = "click_app_template_repository_demo.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
